# geo_json_fastapi

./: pyproject.toml  readme.md
app/: location-info_with_population_over_15000.json  main.py
