[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "ythana",email = "ythana09@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
fastapi = {extras = ["standard"], version = "^0.115.8"}
mangum = "^0.19.0"

